--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -87,13 +87,16 @@
 }
 
 .single-object-error {
-  font-size: '40px';
-  color:red;
+  font-size: 22px; 
+  color: red;
+  font-weight: bold;
 }
 
+
 .single-object-confirm {
-  font-size: '40px';
+  font-size: '22px';
   color: green;
+  font-weight: bold;
 }
 
 .remove-user-btn,
