--- a/frontend/my-app/src/components/users/airline/styles.css
+++ b/frontend/my-app/src/components/users/airline/styles.css
@@ -102,3 +102,9 @@
   color: green;
   font-weight: bold;
 }
+
+.single-object-waiting {
+  font-size: 22px;
+  color: black;
+  font-weight: bold;
+}
